# ai-value-engineering

./: .gitignore  AI_VALUE_ENGINEERING_MASTERCLASS.md  README.md  pyproject.toml
notebooks/: 00_foundations_environment_and_value_thinking.ipynb  01_financial_intelligence_for_ai_engineers.ipynb  02_operating_metrics_to_pnl_impact.ipynb  03_ebitda_basics_and_bridge.ipynb  04_roi_payback_npv.ipynb  05_pe_value_creation_playbook.ipynb  06_cost_of_friction_model.ipynb  07_value_stream_metrics.ipynb  08_graph_bottlenecks_to_value.ipynb  09_working_capital_and_cash.ipynb  10_saas_rationalization_value.ipynb  11_ai_opportunity_scoring.ipynb  12_human_ai_task_split_value.ipynb  13_capstone_approval_flow_acceleration.ipynb  14_capstone_process_knowledge_graphrag.ipynb  15_capstone_procurement_invoice_optimizer.ipynb  16_capstone_access_risk_audit_assistant.ipynb  17_capstone_saas_system_dependency_rationalization.ipynb  18_capstone_portfolio_ai_value_creation_playbook.ipynb  ai_opportunity_scorecard.csv
reports/templates/: ai_opportunity_scorecard.md  cost_of_friction_report.md  ebitda_bridge_template.md  finance_line_item_impact_matrix.md  graph_to_value_report.md  human_ai_task_split.md  investment_decision_template.md  lesson_00_readiness_scorecard.md  pe_ai_value_lever_matrix.md  saas_rationalization_scan.md  value_stream_report.md  workflow_cost_model_template.md  workflow_to_pnl_mapping_template.md  working_capital_ai_case.md
