[project]
name = "ai-value-engineering"
version = "0.1.0"
description = "Private Equity Value Masterclass for AI & Graph Engineers"
requires-python = ">=3.11"
authors = [
    { name = "Value Engineering Team" }
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "networkx>=3.1",
    "jupyter>=1.0.0",
    "ipykernel>=6.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
target-version = "py311"
line-length = 100
